content/_generated-doc/2.7/config/quarkus-grpc-config-group-config-grpc-client-configuration.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients-configures-the-grpc-clients]]link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients-configures-the-grpc-clients[Configures the gRPC clients]

h|Type
h|Default

a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.port]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.port[quarkus.grpc.clients."client-name".port]`

[.description]
--
The gRPC service port.
--|int 
|`9000`


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.host]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.host[quarkus.grpc.clients."client-name".host]`

[.description]
--
The host name / IP on which the service is exposed.
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.ssl.certificate]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.ssl.certificate[quarkus.grpc.clients."client-name".ssl.certificate]`

[.description]
--
The classpath path or file path to a server certificate or certificate chain in PEM format.
--|path 
|


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.ssl.key]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.ssl.key[quarkus.grpc.clients."client-name".ssl.key]`

[.description]
--
The classpath path or file path to the corresponding certificate private key file in PEM format.
--|path 
|


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.ssl.trust-store]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.ssl.trust-store[quarkus.grpc.clients."client-name".ssl.trust-store]`

[.description]
--
An optional trust store which holds the certificate information of the certificates to trust The trust store can be either on classpath or in an external file.
--|path 
|


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.name-resolver]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.name-resolver[quarkus.grpc.clients."client-name".name-resolver]`

[.description]
--
Use a name resolver. Defaults to dns. If set to "stork", host will be treated as SmallRye Stork service name
--|string 
|`dns`


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.plain-text]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.plain-text[quarkus.grpc.clients."client-name".plain-text]`

[.description]
--
Whether `plain-text` should be used instead of `TLS`. Enables by default, except it TLS/SSL is configured. In this case, `plain-text` is disabled.
--|boolean 
|


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.keep-alive-time]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.keep-alive-time[quarkus.grpc.clients."client-name".keep-alive-time]`

[.description]
--
The duration after which a keep alive ping is sent.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.flow-control-window]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.flow-control-window[quarkus.grpc.clients."client-name".flow-control-window]`

[.description]
--
The flow control window in bytes. Default is 1MiB.
--|int 
|


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.idle-timeout]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.idle-timeout[quarkus.grpc.clients."client-name".idle-timeout]`

[.description]
--
The duration without ongoing RPCs before going to idle mode.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.keep-alive-timeout]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.keep-alive-timeout[quarkus.grpc.clients."client-name".keep-alive-timeout]`

[.description]
--
The amount of time the sender of of a keep alive ping waits for an acknowledgement.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.keep-alive-without-calls]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.keep-alive-without-calls[quarkus.grpc.clients."client-name".keep-alive-without-calls]`

[.description]
--
Whether keep-alive will be performed when there are no outstanding RPC on a connection.
--|boolean 
|`false`


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.max-hedged-attempts]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.max-hedged-attempts[quarkus.grpc.clients."client-name".max-hedged-attempts]`

[.description]
--
The max number of hedged attempts.
--|int 
|`5`


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.max-retry-attempts]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.max-retry-attempts[quarkus.grpc.clients."client-name".max-retry-attempts]`

[.description]
--
The max number of retry attempts. Retry must be explicitly enabled.
--|int 
|`5`


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.max-trace-events]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.max-trace-events[quarkus.grpc.clients."client-name".max-trace-events]`

[.description]
--
The maximum number of channel trace events to keep in the tracer for each channel or sub-channel.
--|int 
|


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.max-inbound-message-size]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.max-inbound-message-size[quarkus.grpc.clients."client-name".max-inbound-message-size]`

[.description]
--
The maximum message size allowed for a single gRPC frame (in bytes). Default is 4 MiB.
--|int 
|


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.max-inbound-metadata-size]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.max-inbound-metadata-size[quarkus.grpc.clients."client-name".max-inbound-metadata-size]`

[.description]
--
The maximum size of metadata allowed to be received (in bytes). Default is 8192B.
--|int 
|


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.negotiation-type]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.negotiation-type[quarkus.grpc.clients."client-name".negotiation-type]`

[.description]
--
The negotiation type for the HTTP/2 connection. Accepted values are: `TLS`, `PLAINTEXT_UPGRADE`, `PLAINTEXT`
--|string 
|`TLS`


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.override-authority]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.override-authority[quarkus.grpc.clients."client-name".override-authority]`

[.description]
--
Overrides the authority used with TLS and HTTP virtual hosting.
--|string 
|


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.per-rpc-buffer-limit]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.per-rpc-buffer-limit[quarkus.grpc.clients."client-name".per-rpc-buffer-limit]`

[.description]
--
The per RPC buffer limit in bytes used for retry.
--|long 
|


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.retry]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.retry[quarkus.grpc.clients."client-name".retry]`

[.description]
--
Whether retry is enabled. Note that retry is disabled by default.
--|boolean 
|`false`


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.retry-buffer-size]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.retry-buffer-size[quarkus.grpc.clients."client-name".retry-buffer-size]`

[.description]
--
The retry buffer size in bytes.
--|long 
|


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.user-agent]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.user-agent[quarkus.grpc.clients."client-name".user-agent]`

[.description]
--
Use a custom user-agent.
--|string 
|


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.load-balancing-policy]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.load-balancing-policy[quarkus.grpc.clients."client-name".load-balancing-policy]`

[.description]
--
Use a custom load balancing policy. Accepted values are: `pick_value`, `round_robin`, `grpclb` This value is ignored if name-resolver is set to 'stork'
--|string 
|`pick_first`


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.compression]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.compression[quarkus.grpc.clients."client-name".compression]`

[.description]
--
The compression to use for each call. The accepted values are `gzip` and `identity`.
--|string 
|


a| [[quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.deadline]]`link:#quarkus-grpc-config-group-config-grpc-client-configuration_quarkus.grpc.clients.-client-name-.deadline[quarkus.grpc.clients."client-name".deadline]`

[.description]
--
The deadline used for each call. 
 The format uses the standard `java.time.Duration` format. You can also provide duration values starting with a number. In this case, if the value consists only of a number, the converter treats the value as seconds. Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|

|===
ifndef::no-duration-note[]
[NOTE]
[[duration-note-anchor]]
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]
